--- a/src/web/views/dashboard/guild.ejs
+++ b/src/web/views/dashboard/guild.ejs
@@ -63,6 +63,16 @@
                   </div>
                 </div>
               </div>
+
+              <div class="col-md-6 mb-4">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <h5 class="card-title"><i class="fas fa-wind me-2"></i> Wiatry</h5>
+                    <p class="card-text">Wysyłaj wiadomości z informacjami o wiatrach na wybrane kanały.</p>
+                    <a href="/dashboard/guild/<%= guild.id %>/wiatry" class="btn btn-primary">Zarządzaj</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
