--- a/src/web/views/partials/guild-sidebar.ejs
+++ b/src/web/views/partials/guild-sidebar.ejs
@@ -50,6 +50,9 @@
             <a href="/dashboard/guild/<%= guild.id %>/giveaways" class="list-group-item list-group-item-action <%= path.includes('/giveaways') ? 'active' : '' %>">
             <i class="fas fa-gift me-2"></i> Konkursy
             </a>
+            <a href="/dashboard/guild/<%= guild.id %>/wiatry" class="list-group-item list-group-item-action <%= path.includes('/wiatry') ? 'active' : '' %>">
+            <i class="fas fa-wind me-2"></i> Wiatry
+            </a>
             </div>
             </div>
             </div>
